[gd_scene load_steps=16 format=3 uid="uid://bpt2hb1tomxi2"]

[ext_resource type="Script" path="res://scenes/menu/menu.gd" id="1_q7gmv"]
[ext_resource type="PackedScene" uid="uid://cfynsh1cmj2tb" path="res://scenes/paralax_background/paralax_background.tscn" id="2_wlrp5"]
[ext_resource type="Texture2D" uid="uid://b7804edsrbcqo" path="res://assets/textures/tilesets/tileset.png" id="3_14xbp"]
[ext_resource type="FontFile" uid="uid://bu638ev4rorqq" path="res://assets/fonts/ThaleahFat.ttf" id="4_vm2ku"]
[ext_resource type="Theme" uid="uid://ccjdu7nrsjjwa" path="res://assets/fonts/font_theme.tres" id="4_ylmq2"]
[ext_resource type="AudioStream" uid="uid://btc5kqyoeupqn" path="res://assets/audio/music_menu_CREDIT_Trevor_Kentz.mp3" id="6_ulpo8"]
[ext_resource type="PackedScene" uid="uid://cjqvmxsqpukj4" path="res://scenes/credits/credits.tscn" id="7_plg4r"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_shns0"]
texture = ExtResource("3_14xbp")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
10:1/0 = 0
11:1/0 = 0
13:1/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
0:6/0 = 0
2:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0

[sub_resource type="TileSet" id="TileSet_dys3a"]
sources/0 = SubResource("TileSetAtlasSource_shns0")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q7jek"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.3)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5kaba"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0.75)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iq7gi"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.225, 0.225, 0.225, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ln4xm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fwq61"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="Theme" id="Theme_npxxk"]
default_font = ExtResource("4_vm2ku")
Button/colors/font_color = Color(0.875, 0.875, 0.875, 1)
Button/colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
Button/colors/font_focus_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/font_outline_color = Color(1, 1, 1, 1)
Button/colors/font_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_disabled_color = Color(1, 1, 1, 0.4)
Button/colors/icon_focus_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_normal_color = Color(1, 1, 1, 1)
Button/colors/icon_pressed_color = Color(1, 1, 1, 1)
Button/constants/h_separation = 4
Button/constants/icon_max_width = 0
Button/constants/outline_size = 0
Button/font_sizes/font_size = 25
Button/fonts/font = ExtResource("4_vm2ku")
Button/styles/disabled = SubResource("StyleBoxFlat_q7jek")
Button/styles/focus = SubResource("StyleBoxFlat_5kaba")
Button/styles/hover = SubResource("StyleBoxFlat_iq7gi")
Button/styles/normal = SubResource("StyleBoxEmpty_ln4xm")
Button/styles/pressed = SubResource("StyleBoxFlat_fwq61")

[node name="Menu" type="Node2D"]
script = ExtResource("1_q7gmv")

[node name="ParalaxBackground" parent="." instance=ExtResource("2_wlrp5")]
position = Vector2(96, 37)

[node name="TitleNameMap" type="TileMap" parent="."]
position = Vector2(-2, 2)
tile_set = SubResource("TileSet_dys3a")
format = 2
layer_0/tile_data = PackedInt32Array(65539, 0, 0, 131075, 0, 1, 196611, 0, 2, 131076, 65536, 1, 131077, 65536, 1, 131078, 65536, 1, 131079, 65536, 1, 131080, 65536, 1, 131081, 65536, 1, 131082, 65536, 1, 131083, 65536, 1, 131084, 65536, 1, 131085, 65536, 1, 131086, 65536, 1, 131087, 65536, 1, 131088, 131072, 1, 196624, 131072, 2, 65552, 131072, 0, 196612, 65536, 2, 196613, 65536, 2, 196614, 65536, 2, 196615, 65536, 2, 196616, 65536, 2, 196617, 65536, 2, 196618, 65536, 2, 196619, 65536, 2, 196620, 65536, 2, 196621, 65536, 2, 196622, 65536, 2, 196623, 65536, 2, 65540, 65536, 0, 65541, 65536, 0, 65542, 65536, 0, 65543, 65536, 0, 65544, 65536, 0, 65545, 65536, 0, 65546, 65536, 0, 65547, 65536, 0, 65548, 65536, 0, 65549, 65536, 0, 65550, 65536, 0, 65551, 65536, 0, 393223, 720896, 2, 393224, 720896, 2, 393225, 720896, 2, 393226, 720896, 2, 393227, 720896, 2, 393228, 720896, 2, 393229, 720896, 2, 524296, 720896, 2, 524297, 720896, 2, 524298, 720896, 2, 524299, 720896, 2, 524300, 786432, 2, 655367, 720896, 2, 655368, 720896, 2, 655369, 720896, 2, 655370, 720896, 2, 655371, 720896, 2, 655372, 720896, 2, 393230, 851968, 2, 655373, 786432, 2, 655366, 655360, 2, 524295, 655360, 2, 393222, 655360, 2, 524301, 851968, 2, 655374, 851968, 2)

[node name="StartGame" type="Button" parent="TitleNameMap"]
offset_left = 95.0
offset_top = 80.0
offset_right = 240.0
offset_bottom = 104.0
size_flags_horizontal = 4
theme = SubResource("Theme_npxxk")
text = "Start Game"

[node name="TitleText" type="RichTextLabel" parent="TitleNameMap"]
offset_left = 90.0
offset_top = 24.0
offset_right = 253.0
offset_bottom = 64.0
theme = ExtResource("4_ylmq2")
theme_override_font_sizes/normal_font_size = 32
text = "skylighter"

[node name="CreditsView" type="Button" parent="TitleNameMap"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 127.0
offset_top = 112.0
offset_right = 210.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_npxxk")
text = "Credits"

[node name="QuitGame" type="Button" parent="TitleNameMap"]
offset_left = 114.0
offset_top = 144.0
offset_right = 224.0
offset_bottom = 168.0
theme = SubResource("Theme_npxxk")
text = "Quit Game"

[node name="MainMenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ulpo8")
volume_db = -24.86
autoplay = true

[node name="CreditsBack" type="Button" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.138
anchor_top = 0.219
anchor_right = 0.145
anchor_bottom = 0.219
offset_left = 34.0
offset_top = 32.0
offset_right = 65.0
offset_bottom = 63.0
theme = SubResource("Theme_npxxk")
text = "‚Üê"

[node name="CreditsCanvas" parent="CreditsBack" instance=ExtResource("7_plg4r")]
layer = -1
visible = false

[connection signal="pressed" from="TitleNameMap/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="TitleNameMap/CreditsView" to="." method="_on_credits_view_pressed"]
[connection signal="pressed" from="TitleNameMap/QuitGame" to="." method="_on_quit_game_pressed"]
[connection signal="pressed" from="CreditsBack" to="." method="_on_credits_back_pressed"]
